# SelfHub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: bootstrap_dev.sh
tests/e2e/: test_cli_end_to_end.py  test_setup_wizard.py
tests/integration/: test_init_and_search.py  test_save_pipeline.py
tests/unit/: test_chat_mode_intents.py  test_cli_arg_hints.py  test_cli_help.py  test_cli_tools.py  test_repo_layout.py  test_runtime.py  test_semantic_search.py  test_settings.py
